refactor: 프로필 이미지 업로드 수정